# luoxu-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  luoxu-rs.sample.toml
src/: bot.rs  callbacks.rs  lib.rs  main.rs
