[package]
name = "luoxu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "0.6.2", default-features = false, features = ["native-tls", "sled", "anyhow"] }
ruma = { version = "^0.7.0", features = ["unstable-sanitize", "unstable-msc2676"] }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
meilisearch-sdk = "0.24.3"
heed = "0.20.0-alpha.6"
axum = "0.6.20"
axum-macros = "0.3.8"